--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+    <p>Copyright &#169; 2024 Carlos Lorenzo M. Melchor. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
